[package]
name = "ctmp_numis"
description = "ctmpnumis.fr updater"
version = "1.0.0"
authors = ["Wojciech Jarząbek <WojciechJarzabek@windowslive.com>"]
edition = "2018"
publish = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = true

[dependencies]
anyhow = "1.0.38"
futures = "0.3.13"
notify-rust = "4.2.2"
once_cell = "1.7.0"
reqwest = "0.11.1"
scraper = "0.12.0"
tokio = { version = "1.2.0", features = ["full"] }
tray-item = "0.4.0-alpha"
